0808 일단 여기까지 문제는 해결한거같음